# inv

./: .gitattributes  .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml
.github/workflows/: ci.yml
schema/: inventory.schema.json
src/: app.rs  cli.rs  config.rs  error.rs  main.rs  model.rs  schema.rs  storage.rs  terminal_qr.rs
src/commands/: add.rs  init.rs  ios_setup.rs  label.rs  list.rs  mod.rs  qr.rs  remove.rs  search.rs  show.rs  update.rs  validate.rs
tests/: cli_add.rs  cli_init.rs  cli_ios_setup.rs  cli_label.rs  cli_list.rs  cli_parse.rs  cli_qr.rs  cli_remove.rs  cli_search.rs  cli_show.rs  cli_update.rs  cli_validate.rs
