[package]
name = "inv"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
url = "2.5"
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
